$Id$

2013-02-10  Alex Samorukov  <samm@os2.kiev.ua>

	os_freebsd.cpp: adding device type fix for devices on MPT controlelrs.

2013-02-06  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Seagate Samsung SpinPoint M8U (USB)
	- Hitachi/HGST Travelstar Z5K500
	- Hitachi/HGST Travelstar 5K750
	- Hitachi/HGST Deskstar 7K4000
	- Toshiba 2.5" HDD MK..37GSX
	- Toshiba 2.5" HDD MK..65GSX: GSXN variant
	- Toshiba 2.5" HDD MQ01ABD...
	- Seagate Momentus 7200.5
	- Western Digital Caviar Green (AF, SATA 6Gb/s): 2TB
	- USB: Samsung M3 Portable USB 3.0 (0x04e8:0x61b6)
	- USB: LaCie Rugged Mini USB 3.0 (0x059f:0x1051)
	- Change short attribute names required before r3343.

2013-02-05  Christian Franke  <franke@computer.org>

	smartd.cpp: Fix allocation of buffer passed to putenv().
	Using putenv("NAME") to unset NAME is not portable.

2013-02-05  Christian Franke  <franke@computer.org>

	do_release: New Signing Key.

2013-01-31  Christian Franke  <franke@computer.org>

	dev_areca.h: Use the C++ way to specify unused arguments.
	This silences -Wself-assign warning from clang++.

2013-01-30  Christian Franke  <franke@computer.org>

	configure.ac: Use AC_CHECK_TOOL for winmc and windres.

2013-01-30  Christian Franke  <franke@computer.org>

	Windows smartd: Install service with delayed auto start enabled.

2013-01-26  Christian Franke  <franke@computer.org>

	Windows smartd: Add eventlog MESSAGETABLE resource.
	Install/remove smartd.exe as event message file.
	Remove syslogevt.exe tool.

2013-01-26  Christian Franke  <franke@computer.org>

	Windows: Add required string CompanyName to VERSIONINFO.

2013-01-23  Christian Franke  <franke@computer.org>

	Windows: Add VERSIONINFO resource to exe files.

2013-01-23  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Crucial/Micron RealSSD C300/C400/m4: m4 mSATA variant
	- Indilinx Barefoot 3 based SSDs
	- Intel DC S3700 Series SSDs
	- Samsung based SSD: Samsung SSD 840 Series
